proj1/tests/correct/correct_return_nesting.py
def f(n):
	while 1:
		if 2:
			if 3:
				return 10 + n
	return 1

print True, False, f(10), None
