proj1/tests/error/default_params.py
def default_params(par=5):
	return par + 2
print(default_params())